--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
@@ -15,6 +16,7 @@
     "express": "^4.18.2",
     "fs-extra": "^10.1.0",
     "mysql2": "^3.6.1",
+    "nodemon": "^3.1.0",
     "path": "^0.12.7",
     "request": "^2.88.2"
   },
